--- a/MyWebApp/composer.json
+++ b/MyWebApp/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-php-project",
+    "name": "berkay/sonarqube-test",
     "description": "PHP project for SonarQube analysis",
     "require": {
         "php": ">=8.0",
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "MyWebApp/"
         }
     }
 }
