--- a/.github/workflows/sonarQube-codeScan.yml
+++ b/.github/workflows/sonarQube-codeScan.yml
@@ -1,4 +1,4 @@
-name: PHP Code Analysis & SonarQube Scan
+name: SonarQube Scan Only
 
 on:
   push:
@@ -7,33 +7,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  code-analysis:
+  sonar-scan:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.1'
-          tools: composer, phpstan
-
-      - name: Check PHP version
-        run: php -v
-
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
-        working-directory: MyWebApp  # Eğer composer.json burada ise!
-
-      - name: Run PHPStan Analysis
-        run: vendor/bin/phpstan analyse app --level=max
-        working-directory: MyWebApp
-
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         with:
-          projectBaseDir: MyWebApp
+          projectBaseDir: MyWebApp  # Eğer kodların "MyWebApp" klasöründeyse
           args: >
             -Dsonar.organization=my-org
             -Dsonar.projectKey=my-PHP-web-app
